# lora_uart

./: README.md  client.py  lora.py  pyproject.toml  test.py
examples/: send_sensor_data.py  simple.py
src/ttn_lora/: __init__.py  client.py
