[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ttn-lora"
version = "1.0.0"
description = "Simple TTN LoRaWAN client for DFRobot module on Raspberry Pi"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Your Name" }]
keywords = ["lorawan", "ttn", "iot", "raspberry-pi", "dfrobot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[project.urls]
Repository = "https://github.com/yourusername/ttn-lora"
